5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3998/executions/1635_869.log
== TEST (2019-04-08 14:57:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
e = floar(input("valor da compra:"))
if (e > 200):
	print(e - 5**0.5)
else:
	print(com desconto)
-- ERROR:
File "XXXX", line 8
    print(com desconto)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:58:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
e = float(input("valor da compra:"))
if (e > 200):
	print(e - 5**0.5)
else:
	print("com desconto")
-- OUTPUT:
197.8539320225002
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:01:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
e = float(input("valor da compra:"))
if (e > 200):
	print(e - 5/100)
else:
	print("com desconto")
-- OUTPUT:
200.04
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:02:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = float(input("valor da compra:"))
des = preco - (preco * 5 / 100)
if (e > 200):
	print(
else:
	print("com desconto")
-- ERROR:
File "XXXX", line 8
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:03:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = float(input("valor da compra:"))
des = preco - (preco * 5 / 100)
if (e > 200):
	print(round(des, 2)
else:
	print("com desconto")
-- ERROR:
File "XXXX", line 8
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:04:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = float(input("valor da compra:"))
des = preco - (preco * 5 / 100)
if (e > 200):
	print(round(des, 2)
else:
	print("com desconto")
-- ERROR:
File "XXXX", line 8
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:04:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = float(input("valor da compra:"))
des = preco - (preco * 5 / 100)
if (des >= 200):
	print(round(des, 2)
else:
	print("com desconto")
-- ERROR:
File "XXXX", line 8
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:04:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = float(input("valor da compra:"))
des = preco - (preco * 5 / 100)
if (des >= 200):
	print(round(des, 2))
else:
	print("com desconto")
-- OUTPUT:
com desconto
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:04:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = float(input("valor da compra:"))
des = preco - (preco * 5 / 100)
if (des >= 200):
	print(round(des, 2))
else:
	print("com desconto")
-- EXECUTION TIME:
0.116509
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
com desconto
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
com desconto
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:05:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = float(input("valor da compra:"))
des = preco - (preco * 5 / 100)
if (des > 200):
	print(round(des, 2))
else:
	print("com desconto")
-- OUTPUT:
com desconto
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:05:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = float(input("valor da compra:"))
des = preco - (preco * 5 / 100)
if (des > 200):
	print(round(des, 2))
else:
	print("com desconto")
-- EXECUTION TIME:
0.171552
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
com desconto
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
com desconto
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:05:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = float(input("valor da compra:"))
des = preco - (preco * 5 / 100)
if (preco > 200):
	print(round(des, 2))
else:
	print("sem desconto")
-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:05:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = float(input("valor da compra:"))
des = preco - (preco * 5 / 100)
if (preco > 200):
	print(round(des, 2))
else:
	print("sem desconto")
-- EXECUTION TIME:
0.113672
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
